--- a/vim/vim-config.yaml
+++ b/vim/vim-config.yaml
@@ -47,7 +47,7 @@
       - name: airline-themes
         url: https://github.com/vim-airline/vim-airline-themes
       - name: ctrlp
-        url: https://tpope.io/vim/unimpaired.git
+        url: https://github.com/ctrlpvim/ctrlp.vim.git
       - name: devicons
         url: https://github.com/ryanoasis/vim-devicons.git
       - name: floaterm
