--- a/picom/picom.yaml
+++ b/picom/picom.yaml
@@ -6,6 +6,33 @@
     picom_src_url: https://github.com/yshui/picom/archive/v8.2.zip
     src_dir: "{{ ansible_env.HOME }}/src/"
   tasks:
+    - name: Install dependencies
+      package:
+        name:
+          - libxext-dev
+          - libxcb1-dev
+          - libxcb-damage0-dev
+          - libxcb-xfixes0-dev
+          - libxcb-shape0-dev
+          - libxcb-render-util0-dev
+          - libxcb-render0-dev
+          - libxcb-randr0-dev
+          - libxcb-composite0-dev
+          - libxcb-image0-dev
+          - libxcb-present-dev
+          - libxcb-xinerama0-dev
+          - libxcb-glx0-dev
+          - libpixman-1-dev
+          - libdbus-1-dev
+          - libconfig-dev
+          - libgl1-mesa-dev
+          - libpcre2-dev
+          - libevdev-dev
+          - uthash-dev
+          - libev-dev
+          - libx11-xcb-dev
+        state: present
+      become: yes
     - name: Ensure directories exist
       ansible.builtin.file:
         path: "{{ item }}"
