--- a/zsh/zsh.yaml
+++ b/zsh/zsh.yaml
@@ -31,6 +31,5 @@
     - name: Install oh-my-zsh
       command: curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh
       args:
-        chdir: "{{ oh_my_zsh_dir }}"
-        creates: /usr/local/bin/picom
+        creates: "{{ oh_my_zsh_dir }}"
       become: yes
