--- a/picom/files/picom.conf
+++ b/picom/files/picom.conf
@@ -5,6 +5,7 @@ inactive-dim = 0.5;
 backend = "glx";
 blur-method = "dual_kawase";
 blur-background = true;
+blur-strength = 2;
 shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
