--- a/vim/vim-config.yaml
+++ b/vim/vim-config.yaml
@@ -13,7 +13,7 @@
           - silversearcher-ag
         state: present
       become: yes
-    - name: Ensure .vim/{autoload,bundle} directory exists
+    - name: Ensure .vim/ directories exists
       file:
         path: "{{ item }}"
         state: directory
@@ -57,7 +57,7 @@
       - name: nerdtree-git-plugin
         url: https://github.com/Xuyuanp/nerdtree-git-plugin.git
       - name: solarized
-        url: git://github.com/altercation/vim-colors-solarized.git
+        url: https://github.com/altercation/vim-colors-solarized.git
       - name: uninpaired
         url: https://tpope.io/vim/unimpaired.git
     - name: Ensure .vimrc config in place
