add i3status to kde

--- a/kde/kde-config.yaml
+++ b/kde/kde-config.yaml
@@ -11,6 +11,7 @@
       package:
         name:
           - dmenu
+          - i3status
           - i3-wm
           - kde-plasma-desktop
         state: present
