--- a/playbooks/vim/vim.yaml
+++ b/playbooks/vim/vim.yaml
@@ -46,6 +46,8 @@
         url: https://github.com/vim-airline/vim-airline
       - name: airline-themes
         url: https://github.com/vim-airline/vim-airline-themes
+      - name: ALE
+        url: https://github.com/dense-analysis/ale.git
       - name: ctrlp
         url: https://github.com/ctrlpvim/ctrlp.vim.git
       - name: devicons
