--- a/playbooks/zsh/zsh.yaml
+++ b/playbooks/zsh/zsh.yaml
@@ -31,6 +31,9 @@
         dest: "{{ item.dest }}"
       loop:
         - { src: aliases.zsh, dest: "{{ custom_path }}" }
+        - { src: chruby.zsh, dest: "{{ custom_path }}" }
+        - { src: env.zsh, dest: "{{ custom_path }}" }
+        - { src: nvm.zsh, dest: "{{ custom_path }}" }
         - { src: zshrc, dest: "{{ zshrc }}" }
     - name: Install oh-my-zsh
       command: curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh
