refactor: remove kde in favor of i3wm with i3blocks

--- a/playbooks/i3wm/main.yaml
+++ b/playbooks/i3wm/main.yaml
@@ -1,19 +1,17 @@
-- name: Install and configure KDE with i3wm
+- name: Install and configure i3wm
   hosts: localhost
   gather_facts: yes
   become: no
   vars:
     i3_dir: "{{ ansible_env.HOME }}/.i3"
-    kde_dir: "{{ ansible_env.HOME }}/.config/plasma-workspace/env/"
-    kde_env_file: "{{ ansible_env.HOME }}/.config/plasma-workspace/env/wm.sh"
   tasks:
     - name: Install required packages
       package:
         name:
           - dmenu
+          - i3blocks
           - i3status
           - i3-wm
-          - kde-plasma-desktop
         state: present
       become: yes
     - name: Ensure directories exists
@@ -22,11 +20,11 @@
         state: directory
         mode: 0750
       loop:
-        - "{{ kde_dir }}"
         - "{{ i3_dir }}"
     - name: Ensure config files in place
       copy:
         src: "{{ item.src }}"
         dest: "{{ item.dest }}"
+        backup: yes
       loop:
-        - { src: window-manager.sh, dest: "{{ kde_env_file }}" }
+        - { src: .i3, dest: "{{ ansible_env.HOME }}" }
