--- a/playbooks/i3wm/konsole.yaml
+++ b/playbooks/i3wm/konsole.yaml
@@ -14,7 +14,7 @@
           - konsole
         state: present
       become: yes
-    - name: Ensure directories exists
+    - name: Ensure directories exist
       file:
         path: "{{ item }}"
         state: directory
