--- a/playbooks/i3wm/files/.i3/i3blocks2.conf
+++ b/playbooks/i3wm/files/.i3/i3blocks2.conf
@@ -1,16 +1,16 @@
 [mediaplayer]
-command=$HOME/Documents/Projects/playbooks/i3blocks-contrib/mediaplayer/mediaplayer
+command=$HOME/.i3/i3blocks-contrib/mediaplayer/mediaplayer
 instance=vlc
 interval=5
 signal=10
 
 [mediaplayer]
-command=$HOME/Documents/Projects/playbooks/i3blocks-contrib/mediaplayer/mediaplayer
+command=$HOME/.i3/i3blocks-contrib/mediaplayer/mediaplayer
 instance=chromium
 interval=5
 signal=10
 
 [volume-pulseaudio]
-command=$HOME/Documents/Projects/playbooks/i3blocks-contrib/volume-pulseaudio/volume-pulseaudio
+command=$HOME/.i3/i3blocks-contrib/volume-pulseaudio/volume-pulseaudio
 interval=once
 signal=1
