--- a/playbooks/i3wm/files/.i3/config
+++ b/playbooks/i3wm/files/.i3/config
@@ -1,12 +1,12 @@
 workspace_auto_back_and_forth yes
 
 bar {
-  status_command i3blocks
+  status_command i3blocks -c ~/.i3/i3blocks.conf
   font pango:Hack 16
 }
 
 bar {
-  status_command i3blocks -c ~/.i3blocks2.conf
+  status_command i3blocks -c ~/.i3/i3blocks2.conf
   font pango:Hack 16
   id bar-2
   position top
