add playerctl for i3

--- a/playbooks/i3wm/main.yaml
+++ b/playbooks/i3wm/main.yaml
@@ -12,6 +12,7 @@
           - i3blocks
           - i3status
           - i3-wm
+          - playerctl
         state: present
       become: yes
     - name: Ensure directories exist
