--- a/roles/desktop-env/files/sway/config
+++ b/roles/desktop-env/files/sway/config
@@ -1,6 +1,6 @@
 # Read `man 5 sway` for a complete reference.
 workspace_auto_back_and_forth yes
-font pango:DejaVu Sans Mono 14
+font pango:Hack Nerd Font Mono 14
 
 ### Variables
 set $alt Mod1
