--- a/roles/desktop-env/vars/main.yaml
+++ b/roles/desktop-env/vars/main.yaml
@@ -1,2 +1,6 @@
 sway_dir: "{{ ansible_env.HOME }}/.config/sway"
 alacritty_dir: "{{ ansible_env.HOME }}/"
+zshrc: "{{ ansible_env.HOME }}/.zshrc"
+oh_my_zsh_dir: "{{ ansible_env.HOME }}/.oh-my-zsh"
+oh_my_zsh_repo: "https://github.com/ohmyzsh/ohmyzsh.git"
+zsh_custom_path: "{{ oh_my_zsh_dir }}/custom"
