--- a/roles/desktop-env/tasks/main.yaml
+++ b/roles/desktop-env/tasks/main.yaml
@@ -7,3 +7,6 @@
 - name: Install and configure zsh
   tags: zsh, terminal
   import_tasks: zsh.yaml
+- name: Install and configure tmux
+  tags: tmux, terminal
+  import_tasks: tmux.yaml
