--- a/roles/desktop-env/vars/main.yaml
+++ b/roles/desktop-env/vars/main.yaml
@@ -4,3 +4,5 @@ zshrc: "{{ ansible_env.HOME }}/.zshrc"
 oh_my_zsh_dir: "{{ ansible_env.HOME }}/.oh-my-zsh"
 oh_my_zsh_repo: "https://github.com/ohmyzsh/ohmyzsh.git"
 zsh_custom_path: "{{ oh_my_zsh_dir }}/custom"
+home: "{{ ansible_env.HOME }}"
+tmux_dir: "{{ home }}/.tmux"
