--- a/roles/dev-env/vars/main.yaml
+++ b/roles/dev-env/vars/main.yaml
@@ -3,3 +3,4 @@ vimrc: "{{ ansible_env.HOME }}/.vimrc"
 # src_dir is used for downloading source files to compile code
 src_dir: "{{ ansible_env.HOME }}/.src"
 home: "{{ ansible_env.HOME }}"
+omz_dir: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/"
