dev-env: add docker

--- a/dev.yml
+++ b/dev.yml
@@ -2,3 +2,8 @@
 - hosts: localhost
   roles:
     - dev-env
+  vars_prompt:
+    
+    - name: username
+      prompt: What is your username?
+      private: no
