--- a/roles/dev-env/vars/main.yaml
+++ b/roles/dev-env/vars/main.yaml
@@ -4,3 +4,4 @@ vimrc: "{{ ansible_env.HOME }}/.vimrc"
 src_dir: "{{ ansible_env.HOME }}/.src"
 home: "{{ ansible_env.HOME }}"
 omz_dir: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/"
+username: "{{ ansible_env.USER }}"
