--- a/roles/vms/vars/main.yaml
+++ b/roles/vms/vars/main.yaml
@@ -1,1 +1,11 @@
 username: "{{ ansible_env.USER }}"
+# Looking Glass
+looking_glass_src_dir: "{{ ansible_env.HOME }}/src/looking-glass"
+looking_glass_build_dir: "{{ src_dir }}/client/build"
+git_url: "https://github.com/gnif/LookingGlass.git"
+built_bin: "{{ build_dir }}/looking-glass-client"
+installed_bin: "/usr/local/bin/looking-glass-client"
+build_tag: "B2-0-g76710ef201"
+# ivshmem
+ivshmem_src_dir: "{{ ansible_env.HOME }}/src/looking-glass"
+ivshmem_build_dir: "{{ src_dir }}/module"
