desktop-env: add brave

--- a/roles/desktop-env/tasks/main.yaml
+++ b/roles/desktop-env/tasks/main.yaml
@@ -10,3 +10,6 @@
 - name: Install and configure tmux
   tags: tmux, terminal
   import_tasks: tmux.yaml
+- name: Brave
+  tags: web, browser
+  import_tasks: brave.yaml
