--- a/roles/desktop-env/vars/main.yaml
+++ b/roles/desktop-env/vars/main.yaml
@@ -6,3 +6,4 @@ oh_my_zsh_repo: "https://github.com/ohmyzsh/ohmyzsh.git"
 zsh_custom_path: "{{ oh_my_zsh_dir }}/custom"
 home: "{{ ansible_env.HOME }}"
 tmux_dir: "{{ home }}/.tmux"
+waybar_dir: "{{ ansible_env.HOME }}/.config/waybar"
