--- a/roles/desktop-env/files/sway/config
+++ b/roles/desktop-env/files/sway/config
@@ -23,6 +23,11 @@ hide_edge_borders smart
 
 gaps inner 10
 
+# Opacity / Transparency
+set $opacity 0.9
+for_window [class=".*"] opacity $opacity
+for_window [app_id=".*"] opacity $opactiy
+
 # Your preferred terminal emulator
 set $term alacritty
 
