add opacity to alacritty

--- a/roles/desktop-env/files/alacritty/alacritty.yml
+++ b/roles/desktop-env/files/alacritty/alacritty.yml
@@ -159,6 +159,9 @@ key_bindings:
 mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
 
+# opacity
+background_opacity: 0.9
+
 
 # Shell
 #
