--- a/roles/desktop-env/files/alacritty/alacritty.yml
+++ b/roles/desktop-env/files/alacritty/alacritty.yml
@@ -156,6 +156,9 @@ key_bindings:
 # - Paste
 # - PasteSelection
 # - Copy (TODO)
+selection:
+  save_to_clipboard: true
+
 mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
 
