--- a/roles/desktop-env/tasks/main.yaml
+++ b/roles/desktop-env/tasks/main.yaml
@@ -10,6 +10,9 @@
 - name: Install and configure tmux
   tags: tmux, terminal
   import_tasks: tmux.yaml
+- name: Install waybar
+  tags: waybar, sway
+  import_tasks: waybar.yaml
 - name: Brave
   tags: web, browser
   import_tasks: brave.yaml
