add git dep to zsh task

--- a/roles/desktop-env/tasks/zsh.yaml
+++ b/roles/desktop-env/tasks/zsh.yaml
@@ -1,6 +1,6 @@
 - name: Install zsh
   package:
-    name: zsh
+    name: zsh, git
     state: present
   become: yes
 - name: Ensure directories exist
