add alacritty vars

--- a/roles/desktop-env/vars/main.yaml
+++ b/roles/desktop-env/vars/main.yaml
@@ -7,3 +7,6 @@ zsh_custom_path: "{{ oh_my_zsh_dir }}/custom"
 home: "{{ ansible_env.HOME }}"
 tmux_dir: "{{ home }}/.tmux"
 waybar_dir: "{{ ansible_env.HOME }}/.config/waybar"
+src_dir: "{{ ansible_env.HOME }}/.src"
+alacritty_src: "{{ src_dir }}/alacritty"
+alacritty_build_tag: "v0.9.0"
