update ssh task

--- a/roles/dev-env/tasks/ssh.yaml
+++ b/roles/dev-env/tasks/ssh.yaml
@@ -1,6 +1,6 @@
 - name: Install ssh client and server
   package:
-    name: openssh, openssh-server
+    name: openssh-server
     state: present
   become: yes
 
