--- a/roles/dev-env/vars/main.yaml
+++ b/roles/dev-env/vars/main.yaml
@@ -2,6 +2,7 @@ vim_dir: "{{ ansible_env.HOME }}/.vim"
 vimrc: "{{ ansible_env.HOME }}/.vimrc"
 # src_dir is used for downloading source files to compile code
 src_dir: "{{ ansible_env.HOME }}/.src"
+mkcert_dir: "{{ ansible_env.HOME }}/.src/mkcert"
 home: "{{ ansible_env.HOME }}"
 omz_dir: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/"
 username: "{{ ansible_env.USER }}"
