--- a/roles/vms/tasks/main.yaml
+++ b/roles/vms/tasks/main.yaml
@@ -2,9 +2,9 @@
   tags: qemu, vms
   import_tasks: qemu.yaml
   become: yes
-- name: Looking Glass
-  tags: vms
-  import_tasks: looking-glass.yaml
-- name: IVSHMEM
-  tags: vms
-  import_tasks: ivshmem.yaml
+#- name: Looking Glass
+#  tags: vms
+#  import_tasks: looking-glass.yaml
+#- name: IVSHMEM
+#  tags: vms
+#  import_tasks: ivshmem.yaml
