--- a/roles/dev-env/tasks/vim.yaml
+++ b/roles/dev-env/tasks/vim.yaml
@@ -18,6 +18,7 @@
     - "{{ vim_dir }}/autoload"
     - "{{ vim_dir }}/bundle"
     - "{{ vim_dir }}/colors"
+    - "{{ vim_dir }}/undo-history"
 - name: install the Hack font
   ansible.builtin.unarchive:
     src: https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/Hack.zip
