move non gui tasks from desktop-env to dev-env

--- a/roles/dev-env/tasks/main.yaml
+++ b/roles/dev-env/tasks/main.yaml
@@ -20,3 +20,9 @@
 - name: mkcert
   tags: mkcert
   import_tasks: mkcert.yaml
+- name: Install and configure zsh
+  tags: zsh, terminal
+  import_tasks: zsh.yaml
+- name: Install and configure tmux
+  tags: tmux, terminal
+  import_tasks: tmux.yaml
