Replace deprecated background_opacity with window.opacity

--- a/roles/desktop-env/files/alacritty/alacritty.yml
+++ b/roles/desktop-env/files/alacritty/alacritty.yml
@@ -163,7 +163,7 @@ mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
 
 # opacity
-background_opacity: 0.9
+window.opacity: 0.9
 
 
 # Shell
