--- a/roles/dev-env/tasks/vim.yaml
+++ b/roles/dev-env/tasks/vim.yaml
@@ -8,7 +8,7 @@
       - vim
     state: present
   become: yes
-- name: Ensure directories exists
+- name: Ensure .vim directories exists
   file:
     path: "{{ item }}"
     state: directory
@@ -19,7 +19,14 @@
     - "{{ vim_dir }}/bundle"
     - "{{ vim_dir }}/colors"
     - "{{ vim_dir }}/undo-history"
+- name: Ensure system directories exists
+  file:
+    path: "{{ item }}"
+    state: directory
+    mode: 0750
+  loop:
     - /usr/share/fonts
+  become: yes
 - name: install the Hack font
   ansible.builtin.unarchive:
     src: https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/Hack.zip
