add unzip to required packages for vim

--- a/roles/dev-env/tasks/vim.yaml
+++ b/roles/dev-env/tasks/vim.yaml
@@ -6,6 +6,7 @@
       - grip
       - silversearcher-ag
       - vim
+      - unzip
     state: present
   become: yes
 - name: Ensure .vim directories exists
