--- a/roles/dev-env/tasks/vim.yaml
+++ b/roles/dev-env/tasks/vim.yaml
@@ -20,6 +20,7 @@
     - "{{ vim_dir }}/colors"
     - "{{ vim_dir }}/undo-history"
     - /usr/share/fonts
+  become: yes
 - name: install the Hack font
   ansible.builtin.unarchive:
     src: https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/Hack.zip
